# Rational

./: CMakeLists.txt  CRational.cpp  CRational.h  main.cpp
Test/: Tests.cpp
